--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
-<div>
-  Bienvenido a <h1>inovania</h1>
-</div>
+<html>
+	<head>
+		<title>diving2.0.1</title>
+		<script type="text/javascript" src="lib/diving-2.0.2.js"></script>
+		<link rel="stylesheet" type="text/css" href="lib/css/diving-2.0.2.css">
+	</head>
+	<body>
+		<div id="master"></div>
+		<script type="text/javascript" src="js/controller.js"></script>
+	<!--
+		<style>
+			:root{
+				--b-bg-color: #4d4d4d;
+				--bg-select: black;
+			}
+		</style>
+	-->
+	</body>
+</html>
