--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>diving2.0.1</title>
-		<script type="text/javascript" src="lib/diving-2.0.2.js"></script>
+		<script type="text/javascript" src="lib/diving-2.0.2.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="lib/css/diving-2.0.2.css">
 	</head>
 	<body>
