--- a/pages/ajax/index.html
+++ b/pages/ajax/index.html
@@ -14,8 +14,7 @@
 		type: 'primary',
 		click: function(e){
 			ajax.call({
-				url:'pages/masterContent/php/peticionesAjax.php',
-				//url:'http://localhost:8080/sipco_smart_be_qa/consultas/getValues/CONSULTA_MONITOR_DETALLE',
+				url:'pages/masterContent/php/usuario.json',
 				type: 'POST',
 				header:{"Content-type": "application/x-www-form-urlencoded"},
 				data: { q: 'oscar' },
