--- a/index.html
+++ b/index.html
@@ -1,20 +1,8 @@
 <html>
 	<head>
-		<title>diving2.0.1</title>
-		<script type="text/javascript" src="lib/diving-2.0.2.min.js"></script>
-		
-		<link rel="stylesheet" type="text/css" href="lib/css/diving-2.0.2.css">
+		<title>inovania.blogspot.com</title>
 	</head>
 	<body>
-		<div id="master"></div>
 		<script type="text/javascript" src="js/controller.js"></script>
-	<!--
-		<style>
-			:root{
-				--b-bg-color: #4d4d4d;
-				--bg-select: black;
-			}
-		</style>
-	-->
 	</body>
 </html>
